--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ scipy = [
 typer = "^0.12.5"
 python-docx = "^1.1.2"
 python-pptx = "^1.0.2"
-beautifulsoup4 = "^4.12.3"
+beautifulsoup4 = ">=4.12.3,<4.13.0"
 pandas = "^2.1.4"
 marko = "^2.1.2"
 openpyxl = "^3.1.5"
