--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ packages = [{include = "docling"}]
 python = "^3.9"
 pydantic = "^2.0.0"
 docling-core = {extras = ["chunking"], version = "^2.17.2"}
-docling-ibm-models = "^3.3.0"
+docling-ibm-models = {git = "ssh://git@github.com/DS4SD/docling-ibm-models.git", rev = "dev/add-reading-order"} #"^3.3.0"
 deepsearch-glm = "^1.0.0"
 docling-parse = "^3.3.0"
 filetype = "^1.2.0"
