--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,12 +58,16 @@ onnxruntime = [
   { version = ">=1.7.0,<1.20.0", optional = true, markers = "python_version < '3.10'" },
   { version = "^1.7.0", optional = true, markers = "python_version >= '3.10'" }
 ]
+
 transformers = [
   {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^4.46.0", optional = true },
   {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "~4.42.0", optional = true }
 ]
 pillow = ">=10.0.0,<12.0.0"
 tqdm = "^4.65.0"
+
+# transformers = "^4.47.1"
+# accelerate = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
