--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ transformers = [
   {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^4.46.0", optional = true },
   {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "~4.42.0", optional = true }
 ]
+accelerate = [
+  {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^1.2.1", optional = true },
+]
 pillow = ">=10.0.0,<12.0.0"
 tqdm = "^4.65.0"
 
@@ -128,7 +131,7 @@ torchvision = [
 [tool.poetry.extras]
 tesserocr = ["tesserocr"]
 ocrmac = ["ocrmac"]
-vlm = ["transformers"]
+vlm = ["transformers", "accelerate"]
 rapidocr = ["rapidocr-onnxruntime", "onnxruntime"]
 
 [tool.poetry.scripts]
