--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ packages = [{include = "docling"}]
 ######################
 python = "^3.9"
 pydantic = "^2.0.0"
-docling-core = {extras = ["chunking"], version = "^2.19.0"}
+docling-core = {git = "https://github.com/DS4SD/docling-core", rev = "cau/docling-parse-types", extras = ["chunking"]}
 docling-ibm-models = "^3.4.0"
 docling-parse = {git = "https://github.com/DS4SD/docling-parse", rev = "cau/api-move-to-docling-core"}
 filetype = "^1.2.0"
